fix for poor alignment of sidecar text when minimized
Fixes #755

--- a/app/content/css/ui.css
+++ b/app/content/css/ui.css
@@ -1597,6 +1597,9 @@ break {
 #sidecar.minimized .sidecar-bottom-stripe-left-bits, #sidecar.minimized .header-right-bits {
     flex: 0;
     opacity: 0;
+    margin: 0;
+    width: 0;
+    height: 0;
 }
 #sidecar.minimized .sidecar-bottom-stripe {
     align-items: flex-end;
